--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
 </header>
 <nav>
     <ul>
-        <li class="active"><a href="">Todos</a></li>
-        <li class=""><a href="">Festa Completa</a></li>
-        <li class=""><a href="">Personalizados Papelaria</a></li>
-        <li class=""><a href="">Personalizados de Luxo</a></li>
-        <li class=""><a href="">Kit Kat Personalizados</a></li>
-        <li class=""><a href="">Caixas Especiais</a></li>
+        <li class="active"><a href="/">Todos</a></li>
+        <li class=""><a href="/fullParty">Festa Completa</a></li>
+        <li class=""><a href="/stationary">Personalizados Papelaria</a></li>
+        <li class=""><a href="/lux">Personalizados de Luxo</a></li>
+        <li class=""><a href="/kitkat">Kit Kat Personalizados</a></li>
+        <li class=""><a href="/specials">Caixas Especiais</a></li>
     </ul>
 </nav>
 <section class="banner" style="background-image: url('images/bannerprincipal.jpeg')"></section>
